<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:id="@+id/listItemLayout">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/imageItem"
        android:layout_marginTop="75dp"
        android:background="@color/border"
        android:contentDescription="@string/border_description" />

    <ImageView
        android:id="@+id/imageItem"
        android:layout_width="wrap_content"
        android:layout_height="216dp"
        android:contentDescription="@string/product_image_description"
        android:src="@drawable/casual_dress" />

    <TextView
        android:id="@+id/productText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageItem"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:textColor="@color/productName"
        android:text="@string/product_text"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/productPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/productText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:textColor="@color/productPrice"
        android:text="@string/product_price"
        android:textSize="17sp" />
</RelativeLayout>
